# nyc-dot-projects-bot

./: .gitignore  LICENSE  README.md  check.sh  nyc_dot_bot.py  pyproject.toml  requirements.txt  test_nyc_dot_bot.py  zappa_settings.json
.github/workflows/: bluesky-produdction.yml  mastodon-production.yml  mastodon-staging.yml  mastodon.yml  test.yml  twitter-production.yml
nyc_dot_bot/: __init__.py
