[project]
name = "nyc-dot-bot"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "requests==2.31.0",
    "beautifulsoup4==4.9.3",
    "boto3>=1.26",
    "tweepy>=4.15",
    "python-dotenv==0.18.0",
    "sentry_sdk==1.1.0",
    "click==8.1.7",
    "pytz==2021.1",
    "mastodon.py==1.8.0",
    "pdf2image==1.16.3",
    "atproto>=0.0.56",
]

[project.scripts]
nyc-dot-bot = "nyc_dot_bot:cli"

[dependency-groups]
dev = [
    "pytest",
    "ruff",
    "ty",
]

[tool.ruff]
line-length = 140

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
