[project]
name = "nyc-dot-bot"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "requests==2.32.5",
    "beautifulsoup4==4.14.3",
    "boto3>=1.26",
    "tweepy>=4.15",
    "python-dotenv==1.2.2",
    "sentry_sdk==2.55.0",
    "click==8.3.1",
    "mastodon.py==2.1.4",
    "pdf2image==1.17.0",
    "atproto>=0.0.56",
]

[project.scripts]
nyc-dot-bot = "nyc_dot_bot:cli"

[dependency-groups]
dev = [
    "pytest",
    "ruff",
    "ty",
]

[build-system]
requires = ["uv_build>=0.10,<0.11"]
build-backend = "uv_build"

[tool.uv]
package = true

[tool.uv.build-backend]
module-root = ""

[tool.pytest.ini_options]
markers = ["integration: hits external services"]

[tool.ruff]
line-length = 140

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
